--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,9 +1,9 @@
 * {
   border: none;
   font-family: 'SLICKER', 'sans-serif';
-  font-size: 17px;
+  font-size: 16px;
   font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
-  min-height: 25px;
+  min-height: 10px;
 }
 
 window#waybar {
@@ -11,21 +11,21 @@ window#waybar {
 }
 
 #custom-arch, #workspaces {
-  border-radius: 5px;
+  border-radius: 100px;
   /*background-color: transparent;*/
   background: linear-gradient(
   to bottom,
-  rgba(24, 71, 23, 1) 0%,
-  rgba(24, 71, 23, 1) 2%,
+  rgba(128, 21, 13, 1) 0%,
+  rgba(128, 21, 13, 1) 1%,
   rgba(0, 0, 0, 0.6) 30%,
   rgba(0, 0, 0, 0.6) 70%,
-  rgba(24, 71, 23, 1) 98%,
-  rgba(24, 71, 23, 1) 100%
+  rgba(128, 21, 13, 1) 99%,
+  rgba(128, 21, 13, 1) 100%
 );
 
 /*  color: #36240b;*/
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   margin-right: 10px;
   padding-top: 0px;
   padding-left: 10px;
@@ -35,30 +35,30 @@ window#waybar {
 #custom-arch {
   font-size: 20px;
   margin-left: 15px;
-  color: #acf2bf;
+  color: #edd3d1;
 }
 
 #workspaces button {
   background: transparent;
-  color: #84f0a1;
+  color: #edd3d1;
 }
 
 #clock, #backlight, #pulseaudio, #bluetooth, #network, #battery{
-  border-radius: 5px;
+  border-radius: 100px;
   background: linear-gradient(
   to bottom,
-  rgba(24, 71, 23, 1) 0%,
-  rgba(24, 71, 23, 1) 2%,
+  rgba(128, 21, 13, 1) 0%,
+  rgba(128, 21, 13, 1) 1%,
   rgba(0, 0, 0, 1) 30%,
   rgba(0, 0, 0, 1) 70%,
-  rgba(24, 71, 23, 1) 98%,
-  rgba(24, 71, 23, 1) 100%
+  rgba(128, 21, 13, 1) 99%,
+  rgba(128, 21, 13, 1) 100%
 );
 
-  color: #84f0a1;
+  color: #edd3d1;
   padding-top: 5px;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   padding-left: 10px;
   padding-right: 10px;
   margin-right: 15px;
