--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -78,8 +78,8 @@ window#waybar.hidden {
 }
 
 #workspaces button.active {
-    color: #ffffff; /* Active workspace highlight color */
-    text-shadow: 0 0 5px #ffffff;
+    color: #ffffff; 
+    text-shadow: 0 0 5px #1adff4;
 }
 
 #workspaces button:hover {
@@ -101,6 +101,7 @@ window#waybar.hidden {
         #000000 100%
     );
 }
+
 #custom-spotify {
     margin-left: 8px;
     padding-left: 10px;
